# polyglot-vocab

./: .gitignore  README.md  biome.json  dev.db  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: news-integration-prd.txt  prd.txt
.taskmaster/tasks/: tasks.json
docs/: API_SPEC.md  ARCHITECTURE.md  AUTH_DESIGN.md  IDEAS.md  INFRASTRUCTURE_COST.md  MCP_INTEGRATION.md  NEON_SETUP.md  PRD.md  README.md  ROADMAP.md
messages/: en.json  es.json  ja.json  ko.json  zh.json
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
prisma/: schema.prisma  seed-achievements.ts
public/: manifest.webmanifest
python-ai-service/: Dockerfile  README.md  pyproject.toml
python-ai-service/app/: __init__.py  main.py
python-ai-service/app/api/: __init__.py  articles.py  health.py  words.py
python-ai-service/app/core/: config.py
python-ai-service/app/mcp/: __init__.py  server.py
python-ai-service/app/models/: __init__.py
python-ai-service/app/services/: __init__.py  article_analyzer.py  learning_planner.py  llm.py  register_analyzer.py  slang_analyzer.py  word_explainer.py
python-ai-service/tests/: __init__.py
scripts/: import-to-neon.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ArticleFlashCards.tsx  ArticleReader.tsx  CSVImport.tsx  DailyRecommendations.tsx  EmptyState.tsx  FlashCard.tsx  LanguageContext.tsx  LanguageHeader.tsx  ReadingStats.tsx  SearchFilter.tsx  Statistics.tsx  ThemeProvider.tsx  (+4 more)
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+203 files in other folders)
